[562175] Create new projects using APIs provided by PDE/JDT